# Vaucanson 2, a generic library for finite state machines.
# Copyright (C) 2012-2013 Vaucanson Group.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# The complete GNU General Public Licence Notice can be found as the
# `COPYING' file in the root directory.
#
# The Vaucanson Group consists of people listed in the `AUTHORS' file.

vcsndir = $(includedir)/vcsn
nobase_vcsn_HEADERS =                           \
  algos/aut_to_exp.hh                           \
  algos/complete.hh                             \
  algos/determinize.hh                          \
  algos/accessible.hh                           \
  algos/dot.hh                                  \
  algos/dyn.hh                                  \
  algos/edit-automaton.hh                       \
  algos/eps_removal.hh                          \
  algos/eval.hh                                 \
  algos/fsm.hh                                  \
  algos/is_complete.hh                          \
  algos/is-deterministic.hh                     \
  algos/lift.hh                                 \
  algos/make-context.hh                         \
  algos/print.hh                                \
  algos/product.hh                              \
  algos/standard_of.hh                          \
  algos/transpose.hh                            \
  algos/xml.hh                                  \
  algos/xml/ios.hh                              \
  algos/xml/ios.hxx                             \
  algos/xml/ratexpvisitor.hh                    \
  algos/xml/ratexpvisitor.hxx                   \
  algos/xml/structure.hh                        \
  algos/xml/tools.hh                            \
  algos/xml/weight-visitor.hh                   \
  algos/xml/weight-visitor.hxx                  \
  alphabets/char.hh                             \
  alphabets/setalpha.hh                         \
  core/automaton.hh                             \
  core/crange.hh                                \
  core/entryiter.hh                             \
  core/fwd.hh                                   \
  core/kind.hh                                  \
  core/mutable_automaton.hh                     \
  core/rat/abstract_ratexpset.hh                \
  core/rat/fwd.hh                               \
  core/rat/printer.hh                           \
  core/rat/printer.hxx                          \
  core/rat/ratexp.hh                            \
  core/rat/ratexp.hxx                           \
  core/rat/ratexpset.hh                         \
  core/rat/ratexpset.hxx                        \
  core/rat/transpose.hh                         \
  core/rat/visitor.hh                           \
  core/rat/visitor.hxx                          \
  core/transition.hh                            \
  ctx/abstract_context.hh                       \
  ctx/ctx.hh                                    \
  ctx/fwd.hh                                    \
  ctx/instantiate.hh                            \
  ctx/lal_char_b.hh                             \
  ctx/lal_char_br.hh                            \
  ctx/lal_char_r.hh                             \
  ctx/lal_char_z.hh                             \
  ctx/lal_char_zmin.hh                          \
  ctx/lal_char_zr.hh                            \
  ctx/lal_char_zrr.hh                           \
  ctx/lau_br.hh                                 \
  ctx/lau_z.hh                                  \
  ctx/law_char_b.hh                             \
  ctx/law_char_br.hh                            \
  ctx/law_char_r.hh                             \
  ctx/law_char_z.hh                             \
  ctx/law_char_zmin.hh                          \
  ctx/law_char_zr.hh                            \
  ctx/law_char_zrr.hh                           \
  ctx/letterset.hh                              \
  ctx/unitset.hh                                \
  ctx/wordset.hh                                \
  dyn/ratexp.hh                                 \
  empty.hh                                      \
  factory/de_bruijn.hh                          \
  factory/ladybird.hh                           \
  misc/cast.hh                                  \
  misc/const_traits.hh                          \
  misc/direction.hh                             \
  misc/echo.hh                                  \
  misc/escape.hh                                \
  misc/star_status.hh                           \
  weights/b.hh                                  \
  weights/f2.hh                                 \
  weights/fwd.hh                                \
  weights/polynomialset.hh                      \
  weights/r.hh                                  \
  weights/z.hh                                  \
  weights/zmin.hh
