AM_CPPFLAGS = $(WARNING_CXXFLAGS) -I$(top_srcdir)

noinst_PROGRAMS = simpleaut simplaw ladybird-b ladybird-z poly

simpleaut_SOURCES = simpleaut.cc

simplaw_SOURCES = simplaw.cc

ladybird_b_SOURCES = ladybird.cc
ladybird_b_CPPFLAGS = $(AM_CPPFLAGS) -DW=b

ladybird_z_SOURCES = ladybird.cc
ladybird_z_CPPFLAGS = $(AM_CPPFLAGS) -DW=z

poly_SOURCES = poly.cc
